--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -37,7 +37,7 @@
                 <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                 <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                 <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
-                <li><a routerLink="/packages" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>
+                <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
                 
                 <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
