--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -52,16 +52,16 @@
         </li>
         <li>
             <a href='#'>Maintain</a>
-            <!--<ul>
-                <li>@Html.ActionLink("Customer", "create", "Customers")</li>
-                <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
+            <ul>
+                <li><a routerLink="/customers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer</a></li>
+             <!--   <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
                 <li>@Html.ActionLink("Target Type", "index", "TargetTypes")</li>
                 <li>@Html.ActionLink("Defaults", "tela", "Categories")</li>
                 
                 <li>@Html.ActionLink("Employee", "index", "Employees")</li>
                 <li><a href="#">Supplier</a></li>
-                <li>@Html.ActionLink("Raw Material", "index", "RawMaterials")</li>
-            </ul>-->
+                <li>@Html.ActionLink("Raw Material", "index", "RawMaterials")</li>-->
+            </ul>
         </li>
         <li>
             <a href='#'>Tasks</a>
