--- a/PlasticManufacturer.Client/styles.css
+++ b/PlasticManufacturer.Client/styles.css
@@ -130,17 +130,22 @@ button {
   height: expression(document.body.scrollHeight > document.body.offsetHeight ? document.body.scrollHeight : document.body.offsetHeight + 'px');
 }
 
+.customer-tab-group {
+  border: 1px solid #e8e8e8;
+}
+
+.customer-tab-content {
+  padding: 16px;
+}
 
 
-
-
+/* Css layou */
 
 * {
 	padding: 0;
 	margin: 0;
 	outline: 0;
 }
-
 body {
 	color: #000;
 	min-width: 320px;
@@ -198,6 +203,21 @@ label span {
 	display: block;
 	line-height: 12px;
 }
+
+.big-box {
+    width:330%;
+    margin: 0 !important;
+    height: 30px !important;
+    padding: 4px 11px;
+    border-radius: 5px;
+    border: 1px solid #75abc1;
+    -webkit-box-shadow: inset 1px 0px 1px 1px rgba(240,240,240,1);
+    -moz-box-shadow: inset 1px 0px 1px 1px rgba(240,240,240,1);
+    box-shadow: inset 1px 0px 1px 1px rgba(240,240,240,1);
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 input.checkbox {
 	float: left;
 	display: inline;
@@ -244,6 +264,8 @@ input.checkbox {
 	float: left;
 	display: inline;
 }
+
+
 .cl {
 	display: block;
 	clear: both;
@@ -257,7 +279,7 @@ input.checkbox {
 	line-height: 0;
 	text-indent: -4000px;
 }
-.hidden { display: none !important; }
+.hidden { display: none; }
 .shell {
 	max-width: 1004px;
 	margin: 0 auto;
@@ -295,6 +317,9 @@ small { font-size: 10px; }
 	margin-top: 10px;
 	overflow: hidden;
 }
+
+.form-horizontal {padding:1%;}
+
 .br { margin-left: 10px; }
 .bl { margin-right: 10px; }
 .spacer-20 { margin-bottom: 20px; }
@@ -369,6 +394,9 @@ h1#logo a {
 	background: linear-gradient(to bottom,  #042b46 0%,#05395b 3%,#053f66 6%,#032d52 97%,#417195 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#042b46', endColorstr='#417195',GradientType=0 );
 }
+
+
+
 .blue-box-r {
 	padding-left: 0;
 	padding-right: 19px;
@@ -595,6 +623,9 @@ h2.settings { background-image: url(images/icon-settings.gif); }
 	border-top: 0;
 	height: 100%;
 }
+ .padding-container { padding:5px;  }
+
+
 .color-match {
 	max-width: 958px;
 	position: relative;
@@ -768,17 +799,24 @@ th.last { border: 0 !important; }
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-.address-box .medium { width: 33.3333%; }
-.address-box .small { width: 25%!important; }
-.address-box .smaller { width: 180px; }
-.address-box .smallest { width: 70px; }
+.medium-box {width:51.5%; margin-right:1.1%;}
+
+.address-box .medium {
+    width: 32.3333%;
+    margin-right: 1.2%;
+}
+.address-box .small { width: 25%!important;  margin-right:1.2%;}
+.address-box .smaller  { width: 180px; margin-right:50px; }
+.address-box .smallest { width: 100px; margin-right:1.2%;}
 .address-box .frame {
-	width: 50%;
+	width: 30%;
+    margin-right:10px ;
 	float: left;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+.box-margin{ margin-left:10px;}
 
 
 .formula .color-match { padding: 0 15px; }
@@ -787,6 +825,8 @@ th.last { border: 0 !important; }
 	table-layout: fixed;
 	margin: 0 0 15px;
 }
+
+
 
 .tab-default .col {
 	overflow: hidden;
@@ -801,6 +841,7 @@ th.last { border: 0 !important; }
 }
 .tab-default .pdlft { padding: 0 0 0 15px; }
 .tab-default .label { margin: 15px 0 5px;  }
+.box-margin{ margin-left:60px;}
 
 .shipping-method {
 	overflow: hidden;
@@ -809,11 +850,13 @@ th.last { border: 0 !important; }
 }
 .shipping-method .form-group { margin: 0 0 15px; }
 .shipping-method .shipping-box {
-	width: 50%;
+	width: 46.8%;
 	float: left;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+    margin-right:2%;
+
 }
 
 .arr-green {
@@ -866,8 +909,76 @@ th.last { border: 0 !important; }
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
-.fields-row .fields-bar .col select { width: 100%; }
-.fields-row .fields-bar .form-control { width: 100%;}
+
+    .fields-row .fields-bar .little-box {
+        float: left;
+        width: 188px;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+
+
+/*  configuration Default    */
+
+.s-b-o {
+    float: left;
+    padding: 0 0 0 20px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    margin-right: 11px;
+}
+
+
+.panel-border {
+    border: 1px solid #c6ddeb;
+   margin-bottom:5px;
+}
+.select-box{
+    border-radius: 5px;
+    width: 102%;
+    padding: 5px 43px;
+}
+
+.chk {
+    float: left;
+    margin-right: 20px;    
+}
+
+
+.container-right { float:right;
+                   width:50%;
+}
+.container-right2 {
+    float: right;
+    width: 50%;
+}
+
+
+    .container-left { width:50%;
+    float:left;
+}
+.title-left {
+    margin-bottom: 5px;
+    border: 1px solid cadetblue;
+    width: 67%;
+    padding-left: 10px;
+    border-radius: 5px;
+}
+
+
+.title-right {
+    margin-bottom: 5px;
+    border: 1px solid cadetblue;
+    width: 94%;
+    padding-left: 19px;
+    border-radius: 5px;
+}
+            
+   /*end*/
+
+.fields-row .fields-bar .col select  { width: 100%; border-radius:5px; }
+.f1 .fields-row .fields-bar .form-control { width: 100%;}
 .fields-row .bar-col {
 	float: left;
 	width: 40%;
@@ -875,6 +986,8 @@ th.last { border: 0 !important; }
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 }
+
+
 .fields-row .bar-col + .bar-col { width: 60%; }
 .fields-row .bar-col select { width: 100%; }
 .fields-row .bar-col .col {
@@ -899,6 +1012,8 @@ th.last { border: 0 !important; }
 	-webkit-box-sizing: border-box;
 }
 .form-control.medium { width: 500px; }
+
+
 
 .boxes-holder {
 	overflow: hidden;
@@ -1095,9 +1210,7 @@ th.last { border: 0 !important; }
 	background-size: 20px;
 	background-position: 12px center;
 	padding-left: 38px;
-    
 }
-
 .panel .options ul li a.cancel {
 	background-image: url(images/icon-cancel.gif);
 	background-size: 20px;
@@ -1430,9 +1543,27 @@ th.last { border: 0 !important; }
 }
 #footer .shell a { color: #fff; }
 #footer .shell p { padding: 0; }
-/*
-	Costumer
-*/
+
+
+/* Costumer*/
+.box-style {
+    float: left;
+    width: 40%;
+    padding: 0 0 0 20px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.notes-style {
+    float: left;
+    width: 99.5%;
+    padding: 0 0 0 20px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+/*End*/
+
+
 .centraliza {
 	margin-right: 10px;
 	margin-left: 5px;
@@ -1594,8 +1725,27 @@ table.tableColor td:first-child {
 		width: 100%;
 		padding: 0;
 	}
+    .fields-row .date .form-control {
+        width: 100%;
+    }
+    .form-control2 {
+        border-radius: 5px;
+        width: 90%;
+        padding: 2px;
+        margin: 0 !important;
+        height: 30px !important;
+        padding: 4px 11px;
+        border-radius: 5px;
+        border: 1px solid #75abc1;
+       
+      
+        box-shadow: inset 1px 0px 1px 1px rgba(240,240,240,1);
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+    
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
 	#wrapper {
 		-webkit-transition: all 0.25s linear;
 		-o-transition: all 0.25s linear;
@@ -1842,86 +1992,14 @@ table.tableColor td:first-child {
 	.tab-default .address-box .label.inc-margin { margin: 15px 0 5px; }
 }
 
-@media (max-width: 639px) {
-	.sub-nav {
-		border-radius:5px;
-	}
-	.header-right .menu .drop-down {
-		right: auto;
-		left: 50%;
-		transform: translateX(-50%);
-		-webkit-transform: translateX(-50%);
-	}
-	.header-right ul {
-		display: block;
-		width: 100%;
-	}
-	.header-right .menu {
-		margin: 0 auto;
-		width: 100%;
-	}
-	.header-right ul li {
-		width: 100%;
-		height: auto;
-		padding: 0;
-		margin: 5px auto;
-		background: none;
-	}
-	.header-right .dd-cnt ul li { width: 100%; }
-	.blue-box, .blue-box-r {
-		padding-left: 5px;
-		width: 100%;
-		box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-	}
-	.blue-box { margin: 0; }
-	.blue-box-r { 
-		padding-right: 5px;
-		padding-left: 0;
-		width: 100%;
-	}
-	.fields-row .bar-col .col + .col { padding: 0; }
-	.fields-row .bar-col .col { width: 100%; }
-	.fields-row .bar-col .col.txt-center { text-align: left; }
-	.fields-row .bar-col .col.txt-center .chk-box { float: left; }
-	.fields-row .f-left {
-		width: 100%;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-	.fields-row .f-left .form-control { width: 100%; }
-	.selection-list li { width: 115px; }
-	.gn-table.eq-table td { padding-left: 12px; }
-	.gn-table.eq-table td:before {
-		position: static;
-		display: block;
-		margin: 0 0 5px;
-		width: auto;
-	}
 
-	.order-info .b-right, .order-info .b-left .form-group { margin: 0; }
-	.order-info .b-right .form-group,
-	.order-info .form-group .block {
-		float: none;
-		width: 100%;
-		padding: 0 0 15px;
-	}
-
-	.shipping-method .shipping-box {
-		width: 100%;
-		float: none;
-		overflow: hidden;
-		padding: 0;
-	}
-}
-@media (max-width: 479px) {
+@media (max-width: 577px) {
 	.color-match .order-info .col.fl { width: 100%; }
 	.buttons-margin a, .buttons-margin a + a {
 		float: none;
 		width: 100%;
 		display: block;
-		margin: 0 0 5px;
+		margin: 0 -8px 5px;
 		text-align: center;
 	}
 	.technical-info .date, .technical-info .markup, .fields-row .fields-bar .col {
@@ -1940,11 +2018,6 @@ table.tableColor td:first-child {
 		font-size: 9px;
 	}
 }
-
-
-
-
-
 
 /* MENU NOVO */
 
@@ -1998,7 +2071,15 @@ table.tableColor td:first-child {
 }
 
 @media screen and (max-width:1000px){
-nav{width:100%;}
+    .blue-box, .blue-box-r {
+        position: relative;
+        right: 30px;
+        padding-right: 0px;       
+    }
+    .blue-box-r {
+        padding-left: 30px;
+    }
+
 #cssmenu{width:100%;top: 24px;;position: absolute;}
 #cssmenu > ul{width:100%;display:none;background:#033157;z-index: 9;top: 31px;}
 #csssubmenu > ul{display:none;}
@@ -2071,28 +2152,60 @@ table.dataTable.display tbody tr:hover>.sorting_1, table.dataTable.order-column.
     display: block;
 }
 
-@media screen and (max-width:768px){
-	.panel .options ul li a {
-		width: 100% !important;
-		box-sizing: border-box;
-	}
-	.panel .options ul li {
-		width: 19.8%;
-	}
-	.tabs ul li {
-		width: 100%;
-	}
-}
 
 @media screen and (max-width:768px) {
 
-    .panel .options ul li {
-        width: 50%;
-        box-sizing: border-box;       
+    .blue-box, .blue-box-r {
+        position: relative;
+        right: 5px;
+       
     }
-   
-}
-      
+
+
+    .blue-box-r {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .panel .options ul li a {
+        width: 100% !important;
+        box-sizing: border-box;
+    }
+
+    .box-style {
+        float: left;
+        width: 50%;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+
+    .panel .options ul li {
+        width: 19.8%;
+    }
+
+    .notes-style {
+        float: left;
+        width: 104%;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        margin-left: -20px;
+    }
+
+    
+
+    .address-box {
+        padding: 10px;
+        margin: 0 0 10px;
+        overflow: hidden;
+        border: 0px solid #000;
+        width: 100%;
+    }
+
+    .tabs ul li {
+        width: 100%;
+    }
+     
     
     .fields-row {
         width: 100%;
@@ -2109,41 +2222,112 @@ table.dataTable.display tbody tr:hover>.sorting_1, table.dataTable.order-column.
     }
 
         .shipping-method .shipping-box {
-            width: 50%;
+            width: 46%;
+            float: left;
+        }
+    .shipping-method {
+        overflow: hidden;
+        padding-left: 17px;
+    }
+
+
+    .tabs ul li a {
+        margin: 0 0 0 -5px;
+    }
+    .notes-style {
+        float: left;
+        width: 100%;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        margin-left: 0px;
+    }
+    .form-control {
+        width: 40%;
+    }
+    
+
+}
+
+
+@media screen and (max-width: 577px) {
+
+
+    .little-box {  width:100%;
+                   border-radius:5px;  
+                   padding:5%;
+    }
+
+    .order {    
+        margin-left: 30%;
+        float: left;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+    }
+
+    .blue-box, .blue-box-r {
+        position: relative;
+        right: 1px;
+    }
+
+    .blue-box-r {
+        padding-right: 30px;
+        padding-left: 20px;
+    }
+
+    .panel .options ul li {
+        width: 50% !important;
+        box-sizing: border-box;
+    }
+
+    .notes-style {
+        float: left;
+        width: 104%;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        margin-left: -20px;
+    }
+
+    .box-style {
+        float: left;
+        width: 105.5%;
+        padding: 0 0 0 20px;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        margin-left: -20px;
+    }
+
+    .address-box {
+        padding: 8px 0;
+        margin: 0 0 10px;
+        overflow: hidden;
+        border: 0px solid #000;
+        width: 100%;
+    }
+
+    .fields-row {
+        width: 100%;
+    }
+
+    .fields-row .fields-bar .col select {
+            width: 100%;
+            border-radius:5px;
+        }
+
+    .shipping-method {
+        overflow: hidden;
+        padding-left: 17px;
+    }
+    .shipping-method .shipping-box     
+        {
+            width: 46%;
             float: left;
         }
 
     .tabs ul li a {
         margin: 0 0 0 -5px;
     }
+    .form-control{width:100%;}
 }
-
-
-@media screen and (max-width:480px){
-
-    .panel .options ul li {
-        width: 50% !important;
-        box-sizing: border-box;          
-    }
-    .fields-row { width:100%;}
-        .fields-row .fields-bar .col select {
-            width: 100%;
-        }
-
-    .shipping-method {
-        overflow: hidden;
-        margin-right:0 40px;
-        width: 100%;
-    }
-
-        .shipping-method .shipping-box {
-            width: 50%;
-            float: left;
-        }
-
-    .tabs ul li a {  
-        margin: 0 0 0 -5px;
-    }
-
-    }
 
