--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -38,6 +38,7 @@
                 <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                 <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
                 <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>
+                <li><a routerLink="/employees" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Employee</a></li>
                 <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Status</a></li>
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
                 
