--- a/PlasticManufacturer.Client/app/employees/employee-list.component.html
+++ b/PlasticManufacturer.Client/app/employees/employee-list.component.html
@@ -1,1 +1,40 @@
-﻿
+﻿<div class="panel spacer-20">
+    <div class="panel-heading no-padding">
+        <a class="panel-expander notext fr">&nbsp;</a>
+        <h2 class="clipboard">{{pageTitle}}</h2>
+    </div>
+
+    <div class='panel-body'>
+        <div class="panel-container">
+            <div class="options">
+                <ul>
+                    <li>
+                        <a class="new" [routerLink]="['/employees/0']">New</a>
+                    </li>
+                </ul>
+            </div>
+            <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+
+            <div class='table-responsive'>
+                <table class="table2 gn-table" *ngIf='employees && employees.length'>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor='let employee of employees'>
+                            <td>
+                                <a [routerLink]="['/employees', employee.id]">
+                                    {{employee.name}}
+                                </a>
+                            </td>
+                            <td>{{ employee.description }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
