--- a/ViewAulus/Views/Categories/Tela2.cshtml
+++ b/ViewAulus/Views/Categories/Tela2.cshtml
@@ -9,7 +9,7 @@
 <div class="panel spacer-20">
     <div class="panel-heading no-padding">
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
-        <h2 class="clipboard">Formula Card</h2>
+        <h2 class="clipboard">Formula</h2>
     </div>
     <div class="panel-container">
         <div class="options">
@@ -17,12 +17,12 @@
                 <li><a href="#" class="post">Post</a></li>
                 <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
                 <li><a href="#" class="new">New</a></li>
-                <li><a href="#" class="delete">Delete</a></li>
+                @*<li><a href="#" class="delete">Delete</a></li>
                 <li><a href="#" class="search">Search</a></li>
                 <li><a href="#" class="formula">Formula</a></li>
                 <li><a href="#" class="label">Label</a></li>
                 <li><a href="#" class="send">Send</a></li>
-                <li><a href="#" class="exit">Exit</a></li>
+                <li><a href="#" class="exit">Exit</a></li>*@
 
 
             </ul>
@@ -49,7 +49,7 @@
         </div>
 
 
-        <h2>Formula Card</h2>
+        <h2>Formula </h2>
         <h3>&nbsp;</h3>
 
         <h4>Technical Description</h4>
