--- a/ViewAulus/Views/Categories/Tela3.cshtml
+++ b/ViewAulus/Views/Categories/Tela3.cshtml
@@ -10,7 +10,7 @@
 
     <div class="panel-heading no-padding">
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
-        <h2 class="clipboard">Mark Up</h2>
+        <h2 class="clipboard">MarkUp</h2>
     </div>
 
     <div class="panel-container">
@@ -20,11 +20,11 @@
                 <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
                 <li><a href="#" class="new">New</a></li>
                 <li><a href="#" class="delete">Delete</a></li>
-                <li><a href="#" class="search">Search</a></li>
+                @*<li><a href="#" class="search">Search</a></li>
                 <li><a href="#" class="formula">Formula</a></li>
                 <li><a href="#" class="label">Label</a></li>
                 <li><a href="#" class="send">Send</a></li>
-                <li><a href="#" class="exit">Exit</a></li>
+                <li><a href="#" class="exit">Exit</a></li>*@
             </ul>
         </div>
         <div class="padding-container">
