--- a/ViewAulus/Views/Shared/_Layout.cshtml
+++ b/ViewAulus/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                         <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
                         <li>@Html.ActionLink("Packaging", "index", "Packagings")</li>
                         <li>@Html.ActionLink("Pellet", "index", "Pellets")</li>
-                        <li>@Html.ActionLink("Employee", "index", "Employees")</li>
+                        <li>@Html.ActionLink("Employee", "create", "Employees")</li>
                         @*<li><a href='#'>Sub Item</a>
                             <ul><li><a href='#'>Item 1</a></li></ul>
                         </li>*@
@@ -102,9 +102,11 @@
                         <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
                         <li>@Html.ActionLink("Target Type", "index", "TargetTypes")</li>
                         <li>@Html.ActionLink("Defaults", "tela", "Categories")</li>
+                        <li>@Html.ActionLink("Formula", "tela2", "Categories")</li>
+                        <li>@Html.ActionLink("MarkUp", "tela3", "Categories")</li>
                         @*<li>@Html.ActionLink("Employee", "index", "Employees")</li>
                         <li><a href="#">Supplier</a></li>*@
-                        <li>@Html.ActionLink("Raw Material", "index", "RawMaterials")</li>
+                        <li>@Html.ActionLink("Raw Material", "create", "RawMaterials")</li>
                     </ul>
                 </li>
                 <li>
