--- a/ViewAulus/Views/Categories/Tela.cshtml
+++ b/ViewAulus/Views/Categories/Tela.cshtml
@@ -17,8 +17,8 @@
                 <li><a href="#" class="post">Post</a></li>
                 <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
                 <li><a href="#" class="new">New</a></li>
-                <li><a href="#" class="delete">Delete</a></li>
-                <li><a href="#" class="exit">Exit</a></li>
+                @*<li><a href="#" class="delete">Delete</a></li>
+                <li><a href="#" class="exit">Exit</a></li>*@
             </ul>
         </div>
 
