--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -42,6 +42,10 @@
                 <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Status</a></li>
                 <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
                 <li><a routerLink="/cities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">City</a></li>
+                <li><a routerLink="/customerDefaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Default</a></li>
+                <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Rating</a></li>
+                <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
+                <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
                 
                 <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
