--- a/PlasticManufacturer.Client/styles.css
+++ b/PlasticManufacturer.Client/styles.css
@@ -331,7 +331,7 @@ body.active { overflow: hidden; }
 #wrapper {
 	position: relative;
 	width: 100%;
-	overflow: hidden;
+	overflow: visible;
 }
 #header {
 	min-height: 58px;
