--- a/PlasticManufacturer.Client/app/Pellets/pellet-list.component.html
+++ b/PlasticManufacturer.Client/app/Pellets/pellet-list.component.html
@@ -1,10 +1,40 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿<div class="panel spacer-20">
+    <div class="panel-heading no-padding">
+        <a class="panel-expander notext fr">&nbsp;</a>
+        <h2 class="clipboard">{{pageTitle}}</h2>
+    </div>
 
-</body>
-</html>
+    <div class='panel-body'>
+        <div class="panel-container">
+            <div class="options">
+                <ul>
+                    <li>
+                        <a class="new" [routerLink]="['/pellets/0']">New</a>
+                    </li>
+                </ul>
+            </div>
+            <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+
+            <div class='table-responsive'>
+                <table class="table2 gn-table" *ngIf='pellets && pellets.length'>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor='let pellet of pellets'>
+                            <td>
+                                <a [routerLink]="['/pellets', pellet.id]">
+                                    {{pellet.name}}
+                                </a>
+                            </td>
+                            <td>{{ pellet.description }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
