--- a/PlasticManufacturer.Client/app/departments/department-list.component.html
+++ b/PlasticManufacturer.Client/app/departments/department-list.component.html
@@ -9,14 +9,14 @@
             <div class="options">
                 <ul>
                     <li>
-                        <a class="new" [routerLink]="['/maritalStatus/0']">New</a>
+                        <a class="new" [routerLink]="['/departments/0']">New</a>
                     </li>
                 </ul>
             </div>
             <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
 
             <div class='table-responsive'>
-                <table class="table2 gn-table" *ngIf='maritalStatus && maritalStatus.length'>
+                <table class="table2 gn-table" *ngIf='departments && departments.length'>
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -24,13 +24,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor='let maritalStatu of maritalStatus'>
+                        <tr *ngFor='let department of departments'>
                             <td>
-                                <a [routerLink]="['/maritalStatus', maritalStatu.id]">
-                                    {{maritalStatu.name}}
+                                <a [routerLink]="['/departments', department.id]">
+                                    {{department.name}}
                                 </a>
                             </td>
-                            <td>{{ maritalStatu.description }}</td>
+                            <td>{{ department.description }}</td>
                         </tr>
                     </tbody>
                 </table>
