--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -34,6 +34,12 @@
         <li>
             <a href='#'>Table</a>
             <ul>
+                <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>
+                <li><a routerLink="/titles" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Title</a></li>
+                <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
+                <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Rating</a></li>
+                <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
+                <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pelle</a></li>
                 <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                 <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                 <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
@@ -43,9 +49,7 @@
                 <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
                 <li><a routerLink="/cities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">City</a></li>
                 <li><a routerLink="/customerDefaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Default</a></li>
-                <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Rating</a></li>
-                <li><a routerLink="/departments" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Department</a></li>
-                <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
+                
                 <!--<li>@Html.ActionLink("Category", "index", "Categories")</li>
                 
                 <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
